Configuring DBT project dirs

--- a/dbt_first_model/dbt_project.yml
+++ b/dbt_first_model/dbt_project.yml
@@ -30,7 +30,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  dbt_first_model:
+  jaffle_shop:
     # Config indicated by + and applies to all files under models/example/
-    example:
+    staging:
       +materialized: view
+    staging:
+      +materialized: table
