--- a/dbt_first_model/dbt_project.yml
+++ b/dbt_first_model/dbt_project.yml
@@ -1,4 +1,3 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
@@ -6,7 +5,7 @@ name: 'jaffle_shop'
 version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'dbt_first_model'
+profile: 'jaffle_shop'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -32,7 +31,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   jaffle_shop:
     # Config indicated by + and applies to all files under models/example/
-    staging:
+    example:
       +materialized: view
-    staging:
-      +materialized: table
