--- a/dbt_first_model/dbt_project.yml
+++ b/dbt_first_model/dbt_project.yml
@@ -21,7 +21,6 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
-
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
@@ -30,6 +29,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   jaffle_shop:
-    # Config indicated by + and applies to all files under models/example/
-    example:
+    marts:
+      +materialized: table
+    staging:
       +materialized: view
