moving files: dbt sub folder to dbt main folder

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,7 +1,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'jaffle_shop'
+name: 'dbt_first_model'
 version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
